@@ -18,6 +18,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -26,59 +27,70 @@ import java.util.List;
 public class ProcessMigrationRestService implements CamundaRestService {
 
     private RestTemplate restTemplate;
+    private CamundaApiUtils camundaApiUtils;
 
-    public ProcessMigrationRestService(RestTemplate restTemplate) {
+    public ProcessMigrationRestService(RestTemplate restTemplate, CamundaApiUtils camundaApiUtils) {
         this.restTemplate = restTemplate;
+        this.camundaApiUtils = camundaApiUtils;
     }
 
     public void send(FormModel formModel) {
         HttpHeaders headers = new HttpHeaders();
 
-        CamundaApiUtils.authenticate(headers, formModel);
+        camundaApiUtils.authenticate(headers, formModel);
 
-        formModel.getTaxIDs().forEach(tax -> {
-            HttpEntity<CamundaProcessInstanceRequest> processInstanceRequestHttpEntity = CamundaApiUtils.prepareProcessInstanceRequestHttpEntity(headers, tax, formModel);
+        for (String[] tax : formModel.getTaxIDs()) {
+            HttpEntity<CamundaProcessInstanceRequest> processInstanceRequestHttpEntity = CamundaApiUtils.prepareProcessInstanceRequestHttpEntity(headers, tax);
 
             ResponseEntity<CamundaProcessInstanceResponse[]> processInstanceResponse =
-                    restTemplate.exchange(CamundaApiUtils.getUrl(formModel, CamundaApiRoutes.HISTORY_PROCESS_INSTANCE_RESOURCE_PATH), HttpMethod.POST, processInstanceRequestHttpEntity, CamundaProcessInstanceResponse[].class);
+                    restTemplate.exchange(camundaApiUtils.getUrl(formModel, CamundaApiRoutes.HISTORY_PROCESS_INSTANCE_RESOURCE_PATH), HttpMethod.POST, processInstanceRequestHttpEntity, CamundaProcessInstanceResponse[].class);
 
-            HttpEntity<CamundaActivityInstanceRequest> activityInstanceRequestHttpEntity = CamundaApiUtils.prepareActivityInstanceRequestHttpEntity(headers, processInstanceResponse);
+            if (camundaApiUtils.getObject(processInstanceResponse).isPresent()) {
+                CamundaProcessInstanceResponse processInstance = camundaApiUtils.getObject(processInstanceResponse).get();
 
-            ResponseEntity<CamundaActivityInstanceResponse[]> activityInstanceResponse =
-                    restTemplate.exchange(CamundaApiUtils.getUrl(formModel, CamundaApiRoutes.HISTORY_ACTIVITY_RESOURCE_PATH), HttpMethod.POST, activityInstanceRequestHttpEntity, CamundaActivityInstanceResponse[].class);
+                if (camundaApiUtils.isProcessInstanceIncidents(formModel, headers, restTemplate, processInstance)) {
+                    break;
+                }
 
-            HttpEntity<CamundaProcessMigrationRequest> processInstanceMigrationRequestHttpEntity = prepareProcessInstanceMigrationRequestHttpEntity(headers, formModel, processInstanceResponse, activityInstanceResponse);
+                HttpEntity<CamundaActivityInstanceRequest> activityInstanceRequestHttpEntity = camundaApiUtils.prepareActivityInstanceRequestHttpEntity(headers, processInstanceResponse);
 
-            ResponseEntity<CamundaProcessInstanceMigrationResponse> processInstanceMigrationResponse =
-                    restTemplate.exchange(CamundaApiUtils.getUrl(formModel, CamundaApiRoutes.PROCESS_MIGRATION_RESOURCE_PATH), HttpMethod.POST, processInstanceMigrationRequestHttpEntity, CamundaProcessInstanceMigrationResponse.class);
+                ResponseEntity<CamundaActivityInstanceResponse[]> activityInstanceResponse =
+                        restTemplate.exchange(camundaApiUtils.getUrl(formModel, CamundaApiRoutes.HISTORY_ACTIVITY_RESOURCE_PATH), HttpMethod.POST, activityInstanceRequestHttpEntity, CamundaActivityInstanceResponse[].class);
 
-            logResponse(formModel, processInstanceResponse, processInstanceMigrationResponse.getStatusCodeValue());
-        });
+                HttpEntity<CamundaProcessMigrationRequest> processInstanceMigrationRequestHttpEntity = prepareProcessInstanceMigrationRequestHttpEntity(headers, formModel, processInstanceResponse, activityInstanceResponse);
+
+                ResponseEntity<CamundaProcessInstanceMigrationResponse> processInstanceMigrationResponse =
+                        restTemplate.exchange(camundaApiUtils.getUrl(formModel, CamundaApiRoutes.PROCESS_MIGRATION_RESOURCE_PATH), HttpMethod.POST, processInstanceMigrationRequestHttpEntity, CamundaProcessInstanceMigrationResponse.class);
+
+                logResponse(formModel, processInstanceResponse, processInstanceMigrationResponse.getStatusCodeValue());
+            }
+
+        }
     }
 
-    public static HttpEntity<CamundaProcessMigrationRequest> prepareProcessInstanceMigrationRequestHttpEntity(HttpHeaders headers, FormModel formModel, ResponseEntity<CamundaProcessInstanceResponse[]> processInstanceResponse, ResponseEntity<CamundaActivityInstanceResponse[]> activityInstanceResponse) {
-        String processInstanceId = CamundaApiUtils.getObject(processInstanceResponse).getId();
-        String processDefinitionId = CamundaApiUtils.getObject(processInstanceResponse).getProcessDefinitionId();
+    public HttpEntity<CamundaProcessMigrationRequest> prepareProcessInstanceMigrationRequestHttpEntity(HttpHeaders headers, FormModel formModel, ResponseEntity<CamundaProcessInstanceResponse[]> processInstanceResponse, ResponseEntity<CamundaActivityInstanceResponse[]> activityInstanceResponse) {
+        String processInstanceId = camundaApiUtils.getObject(processInstanceResponse).get().getId();
+        String processDefinitionId = camundaApiUtils.getObject(processInstanceResponse).get().getProcessDefinitionId();
         CamundaProcessMigrationRequest.Instructions instructions = getInstructions(activityInstanceResponse);
         CamundaProcessMigrationRequest.MigrationPlan migrationPlan = CamundaProcessMigrationRequest.MigrationPlan.builder()
                 .sourceProcessDefinitionId(processDefinitionId)
                 .targetProcessDefinitionId(formModel.getTargetProcessDefinitionId())
-                .instructions(List.of(instructions))
+                .instructions(Arrays.asList(instructions))
                 .build();
         CamundaProcessMigrationRequest camundaProcessInstanceMigrationRequest = CamundaProcessMigrationRequest.builder()
                 .migrationPlan(migrationPlan)
-                .processInstanceIds(List.of(processInstanceId))
+                .processInstanceIds(Arrays.asList(processInstanceId))
                 .skipCustomListeners(true)
                 .build();
         HttpEntity<CamundaProcessMigrationRequest> activityInstanceRequestHttpEntity = new HttpEntity<>(camundaProcessInstanceMigrationRequest, headers);
         return activityInstanceRequestHttpEntity;
     }
 
-    private static CamundaProcessMigrationRequest.Instructions getInstructions(ResponseEntity<CamundaActivityInstanceResponse[]> activityInstanceResponse) {
+    private CamundaProcessMigrationRequest.Instructions getInstructions(ResponseEntity<CamundaActivityInstanceResponse[]> activityInstanceResponse) {
         List<String> sourceActivityIds = new LinkedList<>();
-        sourceActivityIds.add(CamundaApiUtils.getObject(activityInstanceResponse).getActivityId());
+        sourceActivityIds.add(camundaApiUtils.getObject(activityInstanceResponse).get().getActivityId());
         List<String> targetActivityIds = new LinkedList<>();
-        targetActivityIds.add(CamundaApiUtils.getObject(activityInstanceResponse).getActivityId());
+        targetActivityIds.add(camundaApiUtils.getObject(activityInstanceResponse).get().getActivityId());
         CamundaProcessMigrationRequest.Instructions instructions = CamundaProcessMigrationRequest.Instructions.builder()
                 .sourceActivityIds(sourceActivityIds)
                 .targetActivityIds(targetActivityIds)
@@ -90,9 +102,9 @@ public class ProcessMigrationRestService implements CamundaRestService {
     private void logResponse(FormModel formModel, ResponseEntity<CamundaProcessInstanceResponse[]> processInstanceResponse, Integer statusCode) {
         if (statusCode == 204) {
             log.info("Process instance={}:{} moved from definition={} to definition={}",
-                    CamundaApiUtils.getObject(processInstanceResponse).getId(),
-                    CamundaApiUtils.getObject(processInstanceResponse).getBusinessKey(),
-                    CamundaApiUtils.getObject(processInstanceResponse).getProcessDefinitionId(),
+                    camundaApiUtils.getObject(processInstanceResponse).get().getId(),
+                    camundaApiUtils.getObject(processInstanceResponse).get().getBusinessKey(),
+                    camundaApiUtils.getObject(processInstanceResponse).get().getProcessDefinitionId(),
                     formModel.getTargetProcessDefinitionId());
         }
     }
